--- a/contact.html
+++ b/contact.html
@@ -186,7 +186,7 @@
             <details>
                 <summary>Comment restaurer mes achats ?</summary>
                 <div class="answer">
-                    Si vous avez changé d'appareil ou réinstallé l'application, vous pouvez restaurer vos achats précédents sans frais. Cherchez le bouton "Restaurer les achats" (souvent situé dans les paramètres ou sur la page de la boutique de l'app) et appuyez dessus. Assurez-vous d'être connecté avec le même identifiant Apple que celui utilisé pour l'achat initial.
+                    Si vous avez changé d'appareil ou réinstallé l'application, vous pouvez restaurer vos achats précédents sans frais. Cherchez le bouton "Restaurer les achats" situé dans les paramètres ou en bas de la page de la boutique, et appuyez dessus. Assurez-vous d'être connecté avec le même identifiant Apple que celui utilisé pour l'achat initial.
                 </div>
             </details>
             
