--- a/privacy.html
+++ b/privacy.html
@@ -58,6 +58,13 @@
             padding: 2px 5px;
             border-radius: 3px;
         }
+        a {
+            color: #007AFF;
+            text-decoration: none;
+        }
+        a:hover {
+            text-decoration: underline;
+        }
     </style>
 </head>
 <body>
@@ -76,25 +83,36 @@
         </div>
 
         <h2>Quelles informations l'Application obtient-elle ?</h2>
-        <p>L'Application a été conçue dans le respect total de votre vie privée. <strong>Elle ne collecte, ne stocke et n'utilise aucune information personnelle</strong> lorsque vous la téléchargez et l'utilisez. Aucune inscription n'est requise pour utiliser l'Application.</p>
+        <p>L'Application a été conçue dans le respect de votre vie privée. Elle ne requiert aucune création de compte et ne collecte pas directement votre nom, adresse e-mail ou numéro de téléphone.</p>
+        <p>Pour assurer le bon fonctionnement du jeu et l'améliorer, nous collectons automatiquement certaines <strong>données techniques et d'utilisation pseudonymisées</strong> via le service Google Firebase Analytics. Ces données incluent :</p>
+        <ul>
+            <li>Un identifiant unique d'installation (Instance ID).</li>
+            <li>Des données sur votre progression (niveaux réussis, indices utilisés, temps de jeu).</li>
+            <li>Des informations sur les interactions avec l'interface (boutique, paramètres).</li>
+            <li><strong>Données de jeu :</strong> En cas d'échec à une énigme, nous collectons le texte de la réponse erronée pour améliorer les énigmes.</li>
+        </ul>
 
         <h2>L'Application collecte-t-elle des informations de localisation ?</h2>
-        <p>Non. Cette Application ne collecte, ni ne suit, ni ne demande aucune information précise concernant la localisation de votre appareil mobile.</p>
+        <p>Non. Cette Application ne collecte, ni ne suit, ni ne demande aucune information précise concernant la localisation de votre appareil mobile. Seules des données géographiques approximatives (pays/région) peuvent être déduites de l'adresse IP par les services d'analyse avant d'être anonymisées.</p>
 
         <h2>Des tiers ont-ils accès à des informations ?</h2>
-        <p>Étant donné que l'Application ne collecte aucune information personnelle, aucune donnée n'est et ne peut être partagée avec des services tiers par l'Éditeur.</p>
+        <p>Oui, nous utilisons le prestataire de services tiers <strong>Google Analytics for Firebase</strong> (fourni par Google Inc.) pour nous aider à analyser l'utilisation de l'Application.</p>
+        <p>Google collecte et traite ces données pour notre compte afin de produire des statistiques sur l'activité des joueurs (par exemple : "combien de joueurs ont fini le niveau 10 ?"). Ces données sont stockées sur les serveurs de Google et sont soumises à leur propre politique de confidentialité, disponible ici : <a href="https://policies.google.com/privacy" target="_blank">https://policies.google.com/privacy</a>.</p>
         
         <h2>Achats Intégrés</h2>
         <p>L'Application propose des achats intégrés. Toutes les transactions sont traitées de manière sécurisée et exclusive par l'App Store d'Apple. L'Éditeur n'a accès à aucune de vos informations de paiement, ni à votre identifiant Apple.</p>
 
         <h2>Contrôle et Désinstallation</h2>
-        <p>Vous pouvez à tout moment arrêter toute collecte d'information (qui est nulle par défaut) par l'Application en la désinstallant simplement de votre appareil. Vous pouvez utiliser les processus de désinstallation standards disponibles sur votre appareil mobile ou via l'App Store.</p>
+        <p>Vous pouvez à tout moment arrêter toute collecte d'information par l'Application en la désinstallant simplement de votre appareil. Vous pouvez utiliser les processus de désinstallation standards disponibles sur votre appareil mobile ou via l'App Store.</p>
+
+        <h2>Durée de conservation</h2>
+        <p>Les données d'analyse associées aux cookies, aux identifiants d'utilisateur ou aux identifiants publicitaires sont conservées par Google Analytics pour une durée de 14 mois avant d'être automatiquement supprimées ou anonymisées.</p>
 
         <h2>Enfants</h2>
         <p>Nous ne sollicitons ni ne collectons sciemment des données auprès d'enfants de moins de <strong>15 ans</strong>. L'Application est conçue pour un public général. Nous encourageons les parents et tuteurs légaux à superviser l'utilisation d'Internet par leurs enfants. Si vous pensez qu'un enfant nous a fourni des informations personnelles, veuillez nous contacter à <code>mondeenigmes@gmail.com</code> afin que nous puissions prendre les mesures nécessaires.</p>
 
         <h2>Sécurité</h2>
-        <p>La protection de vos informations est une priorité. Cependant, puisque l'Application ne collecte aucune donnée personnelle, il n'existe aucun risque que vos données soient consultées par des personnes non autorisées via notre service.</p>
+        <p>La protection de vos informations est une priorité. Nous mettons en œuvre des mesures de sécurité pour protéger les données collectées (anonymisation, filtrage des réponses textuelles) contre tout accès non autorisé.</p>
 
         <h2>Modifications</h2>
         <p>Cette politique de confidentialité peut être mise à jour occasionnellement. Nous vous conseillons de consulter cette page régulièrement pour prendre connaissance de tout changement. La poursuite de l'utilisation de l'Application après une mise à jour vaut acceptation de ces modifications.</p>
