--- a/privacy.html
+++ b/privacy.html
@@ -71,7 +71,7 @@
 
     <div class="container">
         <h1>Politique de Confidentialité</h1>
-        <p class="date-update"><em>Dernière mise à jour : 1er juillet 2025</em></p>
+        <p class="date-update"><em>Dernière mise à jour : 14 décembre 2025</em></p>
 
         <h2>Éditeur de l'Application</h2>
         <p>La présente politique de confidentialité s'applique à l'application mobile "Le Monde des Énigmes" (ci-après "l'Application"), créée et éditée par Nathan Collange (ci-après "l'Éditeur") en tant que service commercial.</p>
